sets up a basic splash page

--- a/app/views/setup/index.html.haml
+++ b/app/views/setup/index.html.haml
@@ -17,6 +17,8 @@
       }
 
   %body
+    = render partial: "application/header"
+    = render partial: "application/flashes"
     %nav.navbar.navbar-default.navbar-fixed-top
       .container-fluid
         .navbar-header
