links main button to boards index

--- a/app/views/splash/index.html.haml
+++ b/app/views/splash/index.html.haml
@@ -2,11 +2,11 @@
   .container
     .row
       .inner-column
-        %h1 Big Fat Title
+        %h1 Work Way more collaboratively and get Way more done
 
-        %p.info Great descriptive content
-
-        = link_to "Call to Action", root_url, class: "btn btn-primary btn-lg"
+        %p.info Our boards, lists, and cards enable you to organize and prioritize your projects in a fun, flexible, and rewarding way.
+        
+        = link_to "Sign Up - It's Free!", boards_path, class: "btn btn-primary btn-lg"
 
 %section.colored.primary#about
   .container
