changes the way boards are displayed on boards index

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -1,8 +1,8 @@
 = navbar position: :static do
   = vertical do
     = link_to root_path do
-      %span.glyphicon.glyphicon-cloud
-      Home
+      %i.fab.fa-trello
+      Trello2
   = horizontal do
     = nav class: 'navbar-right' do
       = link_to 'Contact', ""
