--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,3 +45,37 @@
 // Page-specific styles. These should *only* be used as a last
 // resort if you really truly can't style your content more generally.
 // @import 'sections/profile_page';
+
+.board-tile {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  height:10em;
+  width:10em;
+  margin:10px;
+}
+
+/* Add rounded corners to the top left and the top right corner of the image */
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+/* On mouse-over, add a deeper shadow */
+.board-tile:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+.container a {text-decoration: none; }
+
+.boards-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+.board-buttons-box{
+  align:right;
+  background-color:blue;
+}
