--- a/app/views/application/_head.html.haml
+++ b/app/views/application/_head.html.haml
@@ -2,10 +2,13 @@
   %meta{ :charset => 'utf-8' }/
   %meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
 
-  = display_meta_tags :site => 'Seed Site', :title => page_title, :reverse => true
+  = display_meta_tags :site => 'Trello2', :title => page_title, :reverse => true
 
   %meta{ :name => 'description', :content => '' }/
   %meta{ :name => 'viewport', :content => 'width=device-width' }/
+
+  %link{:crossorigin => "anonymous", :href => "https://use.fontawesome.com/releases/v5.8.2/css/all.css", :integrity => "sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay", :rel => "stylesheet"}/
+
 
   = render 'stylesheets'
   = javascript_include_tag 'modernizr'
