--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,25 +1,19 @@
 .container
   .page-header
     = link_to new_board_path, :class => 'btn btn-primary' do
-      %span.glyphicon.glyphicon-plus
-      New Board
-    %h1 Listing boards
+      %i.fab.fa-trello
+      Create Board
+    
 
-  .table-responsive
-    %table.table.table-striped.table-bordered.table-hover
-      %thead
-        %tr
-          %th Title
-          %th User
-          %th
-          %th
-          %th
-
-      %tbody
-        - @boards.each do |board|
-          %tr
-            %td= board.title
-            %td= board.user
-            %td= link_to 'Show', board
-            %td= link_to 'Edit', edit_board_path(board)
-            %td= link_to 'Destroy', board, :data => { confirm: 'Are you sure?' }, :method => :delete
+  .boards-container
+    - @boards.each do |board|
+      =link_to board do 
+        .board-tile
+          .container
+            %h4 
+              =board.title
+            .br
+            =link_to edit_board_path(board) do
+              %i.fas.fa-pencil-alt
+            =link_to board, :data => { confirm: 'Are you sure?' }, :method => :delete do
+              %i.far.fa-trash-alt
