--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,26 @@ body a{
   margin:10px;
 }
 
+.lists{
+  list-style-type: none;
+  min-height:80vh; 
+  display: flex;
+}
+
+.list-tile{
+  box-shadow: 0 4px 8px 0 rgba(255,255,255, 0.5);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  width:300px; 
+  height:90vh;
+  margin:2px;
+  padding:10px;
+}
+
+.list-tile:hover {
+  box-shadow: 0 8px 16px 0 rgba(255,255,255, 0.5);
+}
+
 /* Add rounded corners to the top left and the top right corner of the image */
 img {
   border-radius: 5px 5px 0 0;
