add's new card form to list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,6 +117,6 @@ img {
 .navbar{
   background-color:darken(#428bca, 6.5%);
 }
-#list_title{
+#list_title, #card_title{
   background-color:#428bca;
 }
