--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,9 +1,12 @@
-%div{:id => "list-#{list.id}"}
+%div{:id => "#{list.id}"}
+  -@list = list
   %li.list-tile
     %h3 
       =list.title
     %p
       =list.created_at.to_s(:long)
+    .cardslist: 
+      = render 'cards/new'
 
   = link_to 'Edit List', edit_board_list_path(@board, list)
   = link_to 'Destroy', [@board,list], method: :delete, data: { confirm: 'Are you sure?' }
