--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -5,7 +5,8 @@
       =list.title
     %p
       =list.created_at.to_s(:long)
-    .cardslist: 
+    .cardslist{:style => 'display:flex;'}
+      = render @list.cards.order(position: :asc)
       = render 'cards/new'
 
   = link_to 'Edit List', edit_board_list_path(@board, list)
